# impactx

./: .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  CheckCharge.ipynb  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml  update_stub.sh
cmake/: ImpactXFunctions.cmake
docs/: Doxyfile  Makefile  README.md  requirements.txt  (+1 more)
src/: CMakeLists.txt  ImpactX.H  ImpactX.cpp  ImpactXVersion.H.in  main.cpp
src/initialization/: AmrCoreData.H  AmrCoreData.cpp  AmrCoreData_fwd.H  CMakeLists.txt  InitAMReX.H  InitAMReX.cpp  InitAmrCore.H  InitAmrCore.cpp  InitDistribution.H  InitDistribution.cpp  InitElement.cpp  InitMeshRefinement.H  InitMeshRefinement.cpp  InitOneBoxPerRank.H  InitOneBoxPerRank.cpp  InitParser.H  InitParser.cpp  Validate.cpp  Warnings.cpp
src/madx/: README.md  mad_core.py  mad_elem.py  mad_gvar.py  mad_macro.py  mad_main.py  mad_var.py
src/madx/interpreter/: mad_eval.py
src/madx/objects/: mad_cmd.py  mad_elem.py  mad_gvar.py  mad_macro.py  mad_var.py
src/madx/utils/: mad_str.py
src/particles/: CMakeLists.txt  ChargeBinning.H  ChargeBinning.cpp  ChargeDeposition.cpp  CollectLost.H  CollectLost.cpp  CovarianceMatrix.H  ImpactXParticleContainer.H  ImpactXParticleContainer.cpp  Push.H  Push.cpp  PushAll.H  ReferenceParticle.H  WakeConvolution.H  WakeConvolution.cpp
src/particles/diagnostics/: BeamRelevant.H  BeamRelevant.cpp  CMakeLists.txt  CovarianceMatrixMath.H  DiagnosticOutput.H  DiagnosticOutput.cpp  EmittanceInvariants.H  EmittanceInvariants.cpp  Invariants.H  NonlinearLensInvariants.H  ReducedBeamCharacteristics.H  ReducedBeamCharacteristics.cpp
src/particles/distribution/: All.H  Empty.H  Gaussian.H  KVdist.H  Kurth4D.H  Kurth6D.H  None.H  Semigaussian.H  T2Z.H  Thermal.H  Triangle.H  Waterbag.H  Z2T.H
src/particles/elements/: All.H  Aperture.H  Aperture.cpp  Buncher.H  CFbend.H  CMakeLists.txt  ChrDrift.H  ChrPlasmaLens.H  ChrQuad.H  ChrUniformAcc.H  ConstF.H  DipEdge.H  Drift.H  Elemlist.H  Empty.H  ExactDrift.H  ExactSbend.H  Kicker.H  LinearMap.H  Marker.H  Multipole.H  None.H  NonlinearLens.H  PROT.H  PRot.H  Programmable.H  Programmable.cpp  Quad.H  RFCavity.H  Sbend.H  ShortRF.H  SoftQuad.H  SoftSol.H  Sol.H  TaperedPL.H  ThinDipole.H
src/particles/elements/diagnostics/: AdditionalProperties.cpp  CMakeLists.txt  openPMD.H  openPMD.cpp  plotplus.H  plotplus.cpp
src/particles/elements/mixin/: alignment.H  beamoptic.H  finite.H  lineartransport.H  named.H  nofinalize.H  regular.H  thick.H  thin.H
src/particles/integrators/: CMakeLists.txt  Integrators.H  Integrators.cpp
src/particles/spacecharge/: CMakeLists.txt  ForceFromSelfFields.H  ForceFromSelfFields.cpp  GatherAndPush.H  GatherAndPush.cpp  PoissonSolve.H  PoissonSolve.cpp
src/particles/transformation/: CMakeLists.txt  CoordinateTransformation.H  CoordinateTransformation.cpp  T2Z.H  TO_FIXED_S.H  TO_FIXED_T.H  ToFixedS.H  ToFixedT.H  Z2T.H
src/particles/wakefields/: CMakeLists.txt  CSRBendElement.H  ChargeBinning.H  ChargeBinning.cpp  ExecuteWakefield.H  HandleWakefield.H  WakeConvolution.H  WakeConvolution.cpp  WakePush.H  WakePush.cpp
src/python/: CMakeLists.txt  ImpactX.cpp  ImpactXParticleContainer.cpp  Iterator.H  ReferenceParticle.cpp  WakeConvolution.cpp  distribution.cpp  elements.cpp  pyImpactX.H  pyImpactX.cpp  transformation.cpp
src/python/impactx/: Dashboard.py  ImpactXParIter.py  ImpactXParIter.pyi  ImpactXParticleContainer.py  MADXParser.py  MADXParser.pyi  __init__.py  __init__.pyi  distribution_input_helpers.py  distribution_input_helpers.pyi  madx_to_impactx.py  madx_to_impactx.pyi
src/python/impactx/dashboard/: __init__.py  __main__.py  jupyterApplication.py  main.py  output_distribution_parameters.txt  output_latticeElements_parameters.txt  requirements.txt  simulation.py  start.py  trame_setup.py
src/python/impactx/dashboard/Analyze/: analyzeFunctions.py  plotsMain.py
src/python/impactx/dashboard/Analyze/plot_ParameterEvolutionOverS/: overS.py
src/python/impactx/dashboard/Analyze/plot_PhaseSpaceProjections/: impactXSettings.py  oldHolderSettings.py  phaseSpace.py  phaseSpaceSettings.py
src/python/impactx/dashboard/Analyze/plot_over_s/: overS.py
src/python/impactx/dashboard/Analyze/plot_phase_space/: blurrySpaceSettings.py  oldHolderSettings.py  phaseSpace.py  phaseSpaceSettings.py
src/python/impactx/dashboard/Input/: generalFunctions.py  trameFunctions.py
src/python/impactx/dashboard/Input/Visualiztion/twiss_phase_space_ellipse/: x_px.py
src/python/impactx/dashboard/Input/csrConfiguration/: csrMain.py
src/python/impactx/dashboard/Input/distributionParameters/: distributionFunctions.py  distributionMain.py  twissParameters.txt
src/python/impactx/dashboard/Input/distributionParametersCard/: distributionFunctions.py  distributionMain.py  twissParameters.txt
src/python/impactx/dashboard/Input/inputParameters/: inputFunctions.py  inputMain.py
src/python/impactx/dashboard/Input/inputParametersCard/: inputFunctions.py  inputMain.py
src/python/impactx/dashboard/Input/latticeConfiguration/: latticeMain.py
src/python/impactx/dashboard/Input/latticeConfigurationCard/: latticeMain.py
src/python/impactx/dashboard/Input/space_charge_configuration/: spaceChargeFunctions.py  spaceChargeMain.py
src/python/impactx/dashboard/Optimize/: optimizeMain.py  run_triplet.py
src/python/impactx/dashboard/Run/optimize_triplet/: run_triplet.py
src/python/impactx/dashboard/Run/optimize_triplet/diags/: reduced_beam_characteristics.0.0  reduced_beam_characteristics_final.0.0  ref_particle.0.0  ref_particle_final.0.0
src/python/impactx/dashboard/Run/optimize_triplet/diags/openPMD/: monitor.h5
src/python/impactx/dashboard/Toolbar/: exportTemplate.py  toolbarMain.py
src/python/impactx/extensions/: ImpactXParIter.pyi  ImpactXParticleContainer.py  ImpactXParticleContainer.pyi  __init__.pyi
src/python/impactx/impactx_pybind/: __init__.pyi  distribution.pyi  elements.pyi  wakeconvolution.pyi
(+376 files in other folders)
